--- a/Barjonas.Common.Windows/View/SharedStyles.xaml
+++ b/Barjonas.Common.Windows/View/SharedStyles.xaml
@@ -19,6 +19,10 @@
     <Thickness x:Key="ControlMargin">10</Thickness>
     <Thickness x:Key="ControlSmallMargin">5</Thickness>
     <SolidColorBrush x:Key="ControlGroupBackground" Color="#22000000" />
+    <Style TargetType="{x:Type controls:MetroWindow}" x:Key="WindowDefault" >
+        <Setter Property="FontFamily" Value="Segoe UI Variable,Segoe UI" />
+        <Setter Property="FontSize" Value="14" />
+    </Style>
     <Style TargetType="{x:Type comview:ComboBoxCustom}" BasedOn="{StaticResource {x:Type ComboBox}}"/>
     <Style TargetType="{x:Type Expander}" BasedOn="{StaticResource {x:Type Expander}}">
         <Setter Property="controls:ControlsHelper.ContentCharacterCasing" Value="Normal"/>
@@ -155,16 +159,19 @@
         <Setter Property="FontSize" Value="10"/>
     </Style>
     <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}" x:Key="PropTitle">
-        <Setter Property="FontFamily" Value="Segoe UI"/>
+        <Setter Property="FontFamily" Value="Segoe UI Variable,Segoe UI"/>
+        <Setter Property="FontWeight" Value="Regular"/>
         <Setter Property="FontSize" Value="10"/>
     </Style>
     <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}" x:Key="PropValue">
-        <Setter Property="FontFamily" Value="Segoe UI Light"/>
+        <Setter Property="FontFamily" Value="Segoe UI Variable,Segoe UI Light"/>
+        <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="FontSize" Value="24"/>
     </Style>
     <Style TargetType="TextBlock" x:Key="Header">
         <Setter Property="FontSize" Value="28"/>
-        <Setter Property="FontFamily" Value="Segoe UI Light"/>
+        <Setter Property="FontFamily" Value="Segoe UI Variable,Segoe UI Light"/>
+        <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="Margin" Value="{StaticResource  ControlSmallMargin}"/>
     </Style>
     <Style TargetType="GridSplitter">
